crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_workspace_verify__coffee_definitions.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
assertion_line: 1150
expression: bundle
---
{
  "request": {
    "timeout_secs": 5
  },
  "response": {
    "elapsed_ms": "<MS>",
    "failed": 0,
    "model_digest": "3cf03d79f3a0dcfc210777d522cbd927dcbdf827ce176a83ab3ae499b73b951f",
    "passed": 0,
    "per_file": [
      "file://<BOOK>/examples/coffee-machine/orchestration.sysml",
      "file://<BOOK>/examples/coffee-machine/requirements.sysml"
    ],
    "total_cases": 5
  }
}
