crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_workspace_verify__coffee_views.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "timeout_secs": 5
  },
  "response": {
    "elapsed_ms": "<MS>",
    "failed": 0,
    "model_digest": "18c47b54d851d33e871035947965d43d07812870c94b1e2acae5592c8e12daf1",
    "passed": 0,
    "per_file": [
      "file://<BOOK>/examples/coffee-machine/orchestration.sysml",
      "file://<BOOK>/examples/coffee-machine/requirements.sysml"
    ],
    "total_cases": 5
  }
}
