crates/testing/sysml-spec-tests/tests/snapshots/service_command_baseline__sysml_workspace_verify__stdlib_base.snap
---
source: crates/testing/sysml-spec-tests/tests/service_command_baseline.rs
expression: bundle
---
{
  "request": {
    "timeout_secs": 5
  },
  "response": {
    "elapsed_ms": "<MS>",
    "failed": 0,
    "model_digest": "79cb4cd32cec15a86815f56abefeecd8de89a25d3721559e7a3e498bc3010391",
    "passed": 0,
    "per_file": [],
    "total_cases": 0
  }
}
